recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:4: error: not found: value butlast
	else{ return butlast(l.tail)
                     ^